public/stylesheets/canvas.css
#canvas {
    border:2px solid #000000;
    background-color: #ffffff;
    display: block;
    margin-top: 2%;
    width: 100%;
    height: 80%;
}


#settings{
    display: inline-block;
    width: 100%;
    height: 15%;
}


#clear {
    float: right;
    background-color: #ff3399; 
    border: none;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    cursor: pointer;
    border-radius: 8px;
    border:2px solid #000000;
    margin: auto;
    margin-top: 3%;
    display: block;
}

#slide-bar-group {
    width:30%;
    heigth: 15%;
    display: inline-block;
}

#slide-bar {
    width: 70%;
    float: left;
    border: none;
    margin: auto;
    margin-top: 3%;
    display: inline-block;
}

#range {
    float: left;
    padding: 8px 18px;
    background-color: antiquewhite;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 8px;
    border:2px solid darkslategrey;
    margin: auto;
    margin-top: 3%;
    display: inline-block;
}


button:focus {outline:0;}


@media screen and (max-width: 699px) {
   #clear {
    padding: 7px 15px;
   }
}


/*@media screen and (max-height: 500px) {
   body {
    overflow-y: auto;
   }
}*/
#undo {
    float: right;
    border: none;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    cursor: pointer;
    border-radius: 8px;
    border:2px solid #000000;
    margin: auto;
    margin-top: 3%;
    display: inline-block;
}



.dropbtn {
    background-color: #EF5350;
    color: white;
    padding: 15px 32px;
    font-size: 16px;
    display: block;
    border: none;
    border-radius: 8px;
    border:2px solid #000000;
    margin: auto;
    margin-top: 3%;
    cursor: pointer;
    text-align: center;
    text-decoration: none;
}




/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}


.dropdown-content {
    display: none;
    position: absolute;
    overflow: scroll;
    background-color: #f9f9f9;
    min-width: 110px;
    max-height: 100px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    margin-left: 2%;
}

/* Buttons inside the dropdown */
.dropdown-content button {
    /*color: black;*/
    /*padding: 12px 16px;*/
    overflow:auto;
    width: 100%;
    margin: 0;
    text-decoration: none;
    padding: 3%;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content button:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}


/* Change the background color of the dropdown button when the dropdown content is shown */
/*.dropdown:hover .dropbtn {*/
    /*background-color: #EF5350;*/
/*}*/

#color1 {
    background-color: #AB47BC;
}

#color2 {
    background-color: #659b41;
}

#color3 {
    background-color: #FFC107;
}

#color4 {
    background-color: #5D4037;
}

/*Tools' dropdown menu stuff*/
.dropbtn-tools {
    background-color: #EF5350;
    color: white;
    padding: 15px 32px;
    font-size: 16px;
    display: block;
    border: none;
    border-radius: 8px;
    border:2px solid #000000;
    margin: auto;
    margin-top: 3%;
    cursor: pointer;
    text-align: center;
    text-decoration: none;
}

.dropdown-tools {
    position: relative;
    display: inline-block;
}

.dropdown-tools-content {
    display: none;
    position: absolute;
    overflow: scroll;
    background-color: #f9f9f9;
    min-width: 110px;
    max-height: 100px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    /*margin-left: 0%;*/
    z-index: 1;
}


.dropdown-tools-content button {
    /*color: black;*/
    /*padding: 12px 16px;*/
    overflow:auto;
    width: 100%;
    margin: 0;
    text-decoration: none;
    padding: 3%;
    display: block;
}

.dropdown-tools:hover .dropdown-tools-content {
    display: block;
}

